collision logic written, not functioning

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -55,6 +55,16 @@ p {
 .frogger {
   position: absolute;
   top: 455px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
+.truck {
+  position: absolute;
+  top: 455px;
+  right: 0px;
+  bottom: 0px;
   left: 0px;
 }
 
