--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -38,18 +38,16 @@ header {
   font-size: 30px;
 }
 
-.modal-content p {
-
-}
-
 .reset {
   margin-left: 150px;
   margin-top: 15px;
   background: black;
   color: white;
+  font-family: monospace;
   font-size: 16px;
   font-weight: 900;
   border: solid white 4px;
+  outline: none;
 }
 
 p {
