--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -143,7 +143,7 @@ p {
 
 .dozer {
   position: absolute;
-  top: 100px;
+  top: 101px;
   right: 0px;
   bottom: 0px;
   left: 800px;
@@ -171,7 +171,13 @@ p {
     width: 800px;
 }
 
-.player * { display: inline }
+.player-one * {
+  margin-bottom: 5px;
+  display: inline;
+  color: red;
+}
+
+.player-two * { display: inline }
 
 .player-info { margin-top: 10px }
 
@@ -197,6 +203,7 @@ p {
   font-size: 16px;
   background-color: #1dc300;
   outline: none;
+  border-radius: 4px;
 }
 
 footer {
